fix: write log to backend.log
